Cybergame-Website-dev/manifest/mk88max/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mk88max-website
  namespace: cybergame-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mk88max-website
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mk88max-website
    spec:
      imagePullSecrets:
        - name: cybergame-registrykey
      containers:
        - name: mk88max-website
          image: cyberrich/cbgame-website:latest
          imagePullPolicy: Always
          #          livenessProbe:
          #            httpGet:
          #              path: /actuator/health/liveness
          #              port: 3000
          #            initialDelaySeconds: 15
          #            periodSeconds: 4
          #          readinessProbe:
          #            httpGet:
          #              path: /actuator/health/readiness
          #              port: 3000
          #            initialDelaySeconds: 15
          #            periodSeconds: 4
          ports:
            - name: http
              containerPort: 3000
