Cybergame-Website-dev/manifest/mk88max/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mk88max-website
  namespace: cybergame-prod
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: mk88max-website
